css/site.css
body {
    font-family: Tahoma, Arial, sans-serif !important;
    font-size: 11px !important;
}

input {
    text-align: center !important;
}

.btn{
    border-radius: 0px !important;
}

.form-control {
    padding: 0px 0px 0px 2px;
    font-size: 11px;
    border-radius: 0px !important;
}

.form-group {
    margin-bottom: 5px !important;
}

.modal-content{
    border-radius: 0px !important;
}

.input-sm {
    font-size: 11px !important;
    height: 27px !important;
}
.btn-sm {
    font-size: 11px !important;
    height: 27px !important;
}

.control-label {
    text-align: left !important;
}

.checkbox {
    margin-top: 0px !important;
    padding-top: 0px !important;
}

hr {
    margin-top: 10px;
    margin-bottom: 10px;
}

.selected-row {
    background-color: #EBEBEB !important;
    color: black;
}

.padding0 {
    padding-left: 0px;
    padding-right: 0px;
}

.padding-top0 {
    padding-right: 0px;
}

.padding-left0 {
    padding-left: 0px;
}

.padding-right0 {
    padding-right: 0px;
}

.padding-left2 {
    padding-left: 2px;
}

.padding-right2 {
    padding-right: 2px;
}

.check {
    margin-top: 0px !important;
}

.check-3 {
    margin-top: -3px !important;
}


.d3-label {
    text-align: left !important;
    font-weight: bold;
    text-decoration: none;
    color: black;
}

.d3-label:hover {
    text-decoration: none;
}

.red {
    color: red;
}

.blue {
    color: blue;
}

.green {
    color: green;
}

